// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField.vue > renders OXD InputField 1`] = `
"<div data-v-d1b4dd00="" class="oxd-input-group oxd-input-field-bottom-space">
  <div data-v-d1b4dd00="" class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-d1b4dd00="" class=""><input data-v-d06e05c9="" class="oxd-input oxd-input--active"></div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`file\` 1`] = `
"<div data-v-d1b4dd00="" class="oxd-input-group oxd-input-field-bottom-space">
  <div data-v-d1b4dd00="" class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-d1b4dd00="" class=""><input data-v-1b4b6e0f="" type="file" class="oxd-file-input">
    <div data-v-1b4b6e0f="" class="oxd-file-div oxd-file-div--active">
      <!--v-if-->
      <div data-v-1b4b6e0f="" class="oxd-file-input-div">No file chosen</div><i data-v-85cde8ca="" data-v-1b4b6e0f="" class="oxd-icon bi-upload oxd-file-input-icon"></i>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`file\` with button 1`] = `
"<div data-v-d1b4dd00="" class="oxd-input-group oxd-input-field-bottom-space">
  <div data-v-d1b4dd00="" class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-d1b4dd00="" class=""><input data-v-1b4b6e0f="" type="file" class="oxd-file-input">
    <div data-v-1b4b6e0f="" class="oxd-file-div oxd-file-div--active">
      <div data-v-1b4b6e0f="" class="oxd-file-button">Browse</div>
      <div data-v-1b4b6e0f="" class="oxd-file-input-div">No file chosen</div><i data-v-85cde8ca="" data-v-1b4b6e0f="" class="oxd-icon bi-upload oxd-file-input-icon"></i>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`input\` 1`] = `
"<div data-v-d1b4dd00="" class="oxd-input-group oxd-input-field-bottom-space">
  <div data-v-d1b4dd00="" class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-d1b4dd00="" class=""><input data-v-d06e05c9="" class="oxd-input oxd-input--active"></div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`textarea\` 1`] = `
"<div data-v-d1b4dd00="" class="oxd-input-group oxd-input-field-bottom-space">
  <div data-v-d1b4dd00="" class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-d1b4dd00="" class=""><textarea data-v-ec75bf0c="" class="oxd-textarea oxd-textarea--active oxd-textarea--resize-vertical"></textarea></div>
  <!--v-if-->
</div>"
`;
